# wasm-camera-filter

./: .gitignore  Cargo.toml  README.md  https_server.py  index.html  main.js  style.css
.github/workflows/: deploy.yml
.kiro/specs/: design.md  requirements.md  tasks.md
.kiro/steering/: project-rules.md
docs/: README.md  execution-flow.html  execution-flow.md  index.html  performance-analysis.html  performance-analysis.md  webassembly-guide.html  webassembly-guide.md
src/: lib.rs
tests/: run_all_tests.py  test_javascript.js
